--- a/.github/workflows/maven-package-caller.yml
+++ b/.github/workflows/maven-package-caller.yml
@@ -42,15 +42,36 @@ on:
         default: true
 
 jobs:
-  call-mulesoft-deploy:
-    permissions:
-      contents: write
-    uses: ./.github/workflows/maven-package.yml
-    with:
-      environment: ${{ inputs.environment }}
-      pom_file_path: ${{ inputs.pom_file_path }}
-      branch: ${{ inputs.branch }}
-      tag: ${{ inputs.tag }}
-      deploy_us: ${{ inputs.deploy_us }}
-      deploy_eu: ${{ inputs.deploy_eu }}
-    secrets: inherit
+  test-github-app-token:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Generate token
+        id: generate-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
+      - name: Use the token
+        run: |
+          echo "Token generated successfully"
+          # Test the token by making an API call
+          curl -H "Authorization: Bearer ${{ steps.generate-token.outputs.token }}" \
+               -H "Accept: application/vnd.github+json" \
+               https://api.github.com/repos/${{ github.repository }}
+
+#  call-mulesoft-deploy:
+#    permissions:
+#      contents: write
+#    uses: ./.github/workflows/maven-package.yml
+#    with:
+#      environment: ${{ inputs.environment }}
+#      pom_file_path: ${{ inputs.pom_file_path }}
+#      branch: ${{ inputs.branch }}
+#      tag: ${{ inputs.tag }}
+#      deploy_us: ${{ inputs.deploy_us }}
+#      deploy_eu: ${{ inputs.deploy_eu }}
+#    secrets: inherit
