decide to variable

--- a/.github/workflows/maven-package-caller.yml
+++ b/.github/workflows/maven-package-caller.yml
@@ -55,15 +55,17 @@ jobs:
       - name: Decode GitHub App Private Key
         id: decode-key
         run: |
-          echo "${{ secrets.APP_PRIVATE_KEY }}" | base64 -d > /tmp/gh-app-key.pem
-          echo "private-key-path=/tmp/gh-app-key.pem" >> $GITHUB_OUTPUT
+          DECODED_KEY=$(echo "${{ secrets.APP_PRIVATE_KEY }}" | base64 -d)
+          echo "private-key<<EOF" >> $GITHUB_OUTPUT
+          echo "$DECODED_KEY" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Generate GitHub App token
         id: generate-token
         uses: actions/create-github-app-token@v1
         with:
           app-id: ${{ secrets.APP_ID }}
-          private-key-path: ${{ steps.decode-key.outputs.private-key-path }}
+          private-key: ${{ steps.decode-key.outputs.private-key }}
 
       - name: Test token with API call
         run: |
